--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
+<link rel="stylesheet" href="style.css">
+
 <head>
   <meta charset="UTF-8">
   <title>Envía SMS o WhatsApp</title>
